# yadb

./: .gitignore  Cache Design.md  Cargo.toml  Concurrent Design Analysis.md  Dockerfile  Makefile  Performance Analysis  README.md  Roadmap  hxheader.sh  ondiskstructures  profile_storage.sh  run_client.sh  run_server.sh  run_storage.sh  setup.sh  start.sh
.github/workflows/: cargo-test.yml
Design and Analysis/: Concurrent Design Analysis.md  FS Layout.md  Iterators.md  LockWait Free Design.md  Performance Analysis  Statistics.md  concurrent design.excalidraw  ondiskstructures  readme.md
src/: client.rs  main.rs  storage.rs
src/storage/: async_cache.rs  batch_writer.rs  errors.rs  memtable.rs  mod.rs  sstable.rs  table.rs  wal.rs
src/storage/wal/: batch_writer.rs  mod.rs
tests/: test_storage.rs
yadb-client/: client.go  go.mod
yadb-server/: go.mod  go.sum  main.go
