[package]
name = "yadb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "storage"
path = "src/storage/mod.rs"

[dependencies]
tokio = { version = "1.29.1", features = ["io-util", "fs", "macros", "rt-multi-thread", "sync", "time"] }
log = "0.4.17"
simplelog = "0.12.1"
crossbeam-skiplist = "0.1.1"
byteorder = "1.4.3"
fastmurmur3 = "0.1.2"
bloomfilter = "1.0.9"

# these are only used in unit/integration tests
tempfile = "3.6.0"
futures = "0.3.28"
rand = { version = "0.8.5", features = ["small_rng", "alloc"] }
