[package]
name = "yadb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[profile.bench]
debug = true

[dependencies]
tokio = { version = "1.29.1", features = ["io-util", "fs", "macros", "rt-multi-thread", "sync", "time"] }
log = "0.4.17"
simplelog = "0.12.1"
crossbeam-skiplist = "0.1.1"
byteorder = "1.4.3"
fastmurmur3 = "0.1.2"
schnellru = "0.2.1"
futures = "0.3.28"
serde = "1.0.185"
bincode = "1.3.3"
growable-bloom-filter = "2.0.1"
uuid = {version = "1.4.1", features = ["v4"]}

# only used in unit/integratiojn tests
[dev-dependencies]
futures = "0.3.28"
tempfile = "3.6.0"
rand = { version = "0.8.5", features = ["small_rng", "alloc"] }
